--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ body, html {
     height: 100vh;
     background-color: #333;
     color: #ddd;
+    font-family: 'Montserrat Alternates', sans-serif;
 }
 
 img {
@@ -41,7 +42,7 @@ h2 {
 progress {
     height: 6px;
     width: 50%;
-    background-color: #333;
+    background-color: #696969;
 }
 
 .ponto {
@@ -50,4 +51,33 @@ progress {
     background-color: #eee;
     border-radius: 50%;
     margin-left: -2px;
+}
+
+.tempo {
+    display: flex;
+    width: 300px;
+    justify-content: space-between;
+}
+
+.player {
+    width: 300px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    margin-top: 20px;
+}
+
+.bt-play, .bt-pause {
+    font-size: 60px;
+    cursor: pointer;
+}
+
+.bt-setas {
+    font-size: 40px;
+    cursor: pointer;
+}
+
+.bt-pause {
+    display: none;
+    cursor: pointer;
 }
